--- a/.github/workflows/react-utils.yml
+++ b/.github/workflows/react-utils.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches: '*'
     tags: react-utils-*
-    paths: packages/react-utils/**
+    paths:
+      - .github/workflows/*
+      - packages/react-utils/**
 
 jobs:
   build:
