--- a/.github/workflows/utils.yml
+++ b/.github/workflows/utils.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches: '*'
     tags: utils-*
-    paths: packages/utils/**
+    paths:
+      - .github/workflows/*
+      - packages/utils/**
 
 jobs:
   build:
