Remove unnecessary files from published packages

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
     "build:full": "cd ../utils && pnpm build && cd ../core && pnpm build",
     "build": "tsc",
