--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@athenajs/utils",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "license": "MIT",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "lint": "biome check src",
