--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -1,5 +1,5 @@
 name: Core
-run-name: ${{ github.ref_type == 'tag' && 'Publish' || 'Build' }} ${{ github.ref_name || 'core' }}
+run-name: ${{ github.ref_type == 'tag' && 'Publish' || 'Build' }} ${{ github.ref_type == 'tag' && github.ref_name || 'core' }}
 on:
   push:
     branches: '*'
