--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@athenajs/core",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "license": "MIT",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build:full": "cd ../utils && pnpm build && cd ../core && pnpm build",
     "build": "tsc",
