Readd Dockerfile to react-scripts published package

--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -7,7 +7,8 @@
   "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "scripts"
+    "scripts",
+    "Dockerfile"
   ],
   "scripts": {
     "build:full": "cd ../utils && pnpm build && cd ../react-utils && pnpm build",
