Support dynamic WEB_DIR in react-utils/Dockerfile

--- a/packages/react-utils/Dockerfile
+++ b/packages/react-utils/Dockerfile
@@ -1,25 +1,32 @@
+# Make sure to build this image using the root context, not "web" context
 FROM node:20-alpine AS builder
+ARG WEB_DIR=.
 
+WORKDIR /app
 RUN npm i -g pnpm@latest
-COPY package.json pnpm-lock.yaml ./
+COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
+COPY ${WEB_DIR}/package.json ${WEB_DIR}/
 RUN pnpm install --frozen-lockfile
 
-COPY src src
-COPY index.html ./
-COPY vite.config.ts tsconfig.json tsconfig.node.json ./
-COPY .env.example ./
+WORKDIR /app/${WEB_DIR}
+COPY ${WEB_DIR}/src src
+COPY ${WEB_DIR}/index.html ./
+COPY ${WEB_DIR}/vite.config.ts ./
+COPY ${WEB_DIR}/tsconfig.json ${WEB_DIR}/tsconfig.node.json ./
+COPY ${WEB_DIR}/.env.example ./
 
 RUN pnpm build
 
 FROM node:20-alpine AS server
+ARG WEB_DIR=.
 
 WORKDIR /app
 
 RUN npm i -g serve
 RUN npm i @athenajs/react-utils
 
-COPY --from=builder .env.example ./
-COPY --from=builder dist dist
+COPY --from=builder /app/${WEB_DIR}/.env.example ./
+COPY --from=builder /app/${WEB_DIR}/dist dist
 
 ENV PORT=3000
 
