--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,20 +17,21 @@
     "test": "vitest run"
   },
   "engines": {
-    "node": "^20.10"
+    "node": "^20.12"
   },
   "repository": {
     "url": "git+https://github.com/aldahick/athena"
   },
+  "bugs": "https://github.com/aldahick/athena/issues",
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "@as-integrations/fastify": "^2.1.1",
-    "@athenajs/utils": "workspace:^",
+    "@athenajs/utils": "workspace:*",
     "@fastify/cors": "^9.0.1",
-    "@fastify/multipart": "^8.2.0",
+    "@fastify/multipart": "^8.3.0",
     "dotenv": "^16.4.5",
-    "fastify": "^4.27.0",
-    "graphql": "^16.8.1",
+    "fastify": "^4.28.0",
+    "graphql": "^16.9.0",
     "graphql-resolve-batch": "^1.0.3",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.8.0",
