--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "repository": {
     "url": "git+https://github.com/aldahick/athena.git"
   },
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky"
+  },
   "engines": {
     "node": "^20.12"
   },
@@ -19,6 +21,8 @@
     "@swc/core": "^1.6.5",
     "@types/node": "^20.14.8",
     "@vitest/coverage-v8": "^1.6.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.5.2",
     "unplugin-swc": "^1.4.5",
