--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,20 +24,25 @@
   },
   "bugs": "https://github.com/aldahick/athena/issues",
   "dependencies": {
-    "@apollo/server": "^4.11.0",
-    "@as-integrations/fastify": "^2.1.1",
+    "@aldahick/apollo-fastify": "^3.0.1",
+    "@apollo/server": "^4.11.1",
     "@athenajs/utils": "workspace:*",
-    "@fastify/cors": "^9.0.1",
-    "@fastify/multipart": "^8.3.0",
+    "@fastify/cors": "^10.0.1",
+    "@fastify/multipart": "^9.0.1",
+    "@fastify/websocket": "^11.0.1",
+    "@graphql-tools/schema": "^10.0.7",
     "dotenv": "^16.4.5",
-    "fastify": "^4.28.1",
+    "fastify": "^5.0.0",
     "graphql": "^16.9.0",
     "graphql-resolve-batch": "^1.0.3",
+    "graphql-ws": "^5.16.0",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.8.0",
-    "winston": "^3.15.0"
+    "winston": "^3.15.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@types/graphql-resolve-batch": "^1.1.11"
+    "@types/graphql-resolve-batch": "^1.1.11",
+    "@types/ws": "^8.5.12"
   }
 }
