--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,6 @@ name: Build
 on:
   workflow_call:
     inputs:
-      build-script:
-        required: false
-        type: string
-        default: build:full
       directory:
         required: true
         type: string
@@ -22,8 +18,7 @@ jobs:
         with:
           version: 9
       - run: pnpm install
-      - run: pnpm ${{ inputs.build-script }}
-        working-directory: ${{ inputs.directory }}
+      - run: pnpm build ${{ inputs.directory }}
       - run: pnpm test
         working-directory: ${{ inputs.directory }}
       - run: pnpm lint
