--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "repository": {
     "url": "git+https://github.com/aldahick/athena.git"
   },
+  "type": "module",
   "scripts": {
-    "prepare": "husky"
+    "prepare": "husky",
+    "build": "tsx ./scripts/build.ts"
   },
   "engines": {
     "node": "^22.10"
@@ -24,6 +26,7 @@
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "tsc-watch": "^6.2.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "unplugin-swc": "^1.5.1",
     "vitest": "^2.1.4"
