--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
     with:
-      directory: packages/core
+      package: core
 
   publish:
     if: ${{ github.ref_type == 'tag' }}
@@ -20,4 +20,4 @@ jobs:
     uses: ./.github/workflows/publish.yml
     secrets: inherit
     with:
-      directory: packages/core
+      package: core
