Fix syntax in workflows

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -2,8 +2,10 @@ name: Core
 run-name: ${{ github.ref_type == 'tag' && 'Publish' || 'Build' }} ${{ github.ref_type == 'tag' && github.ref_name || 'core' }}
 on:
   push:
-    branches: '*'
-    tags: core-*
+    branches:
+      - '*'
+    tags:
+      - core-*
     paths:
       - .github/workflows/*
       - packages/core/**
