--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "tsx ./scripts/build.ts"
   },
   "engines": {
-    "node": "^22.10"
+    "node": ">=20"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
