--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -16,7 +16,7 @@
     "test": "vitest run"
   },
   "engines": {
-    "node": "^22.10"
+    "node": ">=20"
   },
   "repository": {
     "url": "git+https://github.com/aldahick/athena"
